--- a/Oreilly_Curls.ipynb
+++ b/Oreilly_Curls.ipynb
@@ -3,7 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "1Hg55bdpj4IArHHXMo0JffSWewZZRV4E7",
+      "authorship_tag": "ABX9TyMUYJkAkyHdsVhmLmDAmFVx",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/artamaral/Oreilly_curls/blob/main/Oreilly_Curls.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -1355,146 +1368,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "GIT config"
-      ],
-      "metadata": {
-        "id": "_eOltHBoUFLy"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!apt-get install git"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mTb_ENemT_vm",
-        "outputId": "1456f7dc-6f1b-4664-e477-e3fc167184e2"
-      },
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Reading package lists... Done\n",
-            "Building dependency tree... Done\n",
-            "Reading state information... Done\n",
-            "git is already the newest version (1:2.34.1-1ubuntu1.11).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 49 not upgraded.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git config --global user.email \"artamaral@yahoo.com.br \"\n",
-        "!git config --global user.name \"Bugiga\""
-      ],
-      "metadata": {
-        "id": "h0u17VxXTHHD"
-      },
-      "execution_count": 33,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git clone https://github.com/artamaral/Oreilly_curls.git"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "w2tUwlgRTUfF",
-        "outputId": "19f54468-af08-459e-f19f-6200108bea93"
-      },
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "fatal: destination path 'Oreilly_curls' already exists and is not an empty directory.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!cp /content/drive/MyDrive/Colab_Notebooks/Oreilly_Curls.ipynb /content/Oreilly_curls"
-      ],
-      "metadata": {
-        "id": "1Nn7sAuVTjXU"
-      },
-      "execution_count": 29,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%cd /content/Oreilly_curls\n",
-        "!git branch --unset-upstream\n",
-        "!git branch --set-upstream-to=origin/master main\n",
-        "!git add Oreilly_curls/\n",
-        "!git add Oreilly_Curls.ipynb\n",
-        "!git commit -m \"1st Commit\"\n",
-        "!git push"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ElK_eXcJT077",
-        "outputId": "e1c26817-7c77-43db-8618-0c5e5b0e7f7a"
-      },
-      "execution_count": 36,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/Oreilly_curls\n",
-            "error: the requested upstream branch 'origin/master' does not exist\n",
-            "\u001b[33mhint: \u001b[m\n",
-            "\u001b[33mhint: If you are planning on basing your work on an upstream\u001b[m\n",
-            "\u001b[33mhint: branch that already exists at the remote, you may need to\u001b[m\n",
-            "\u001b[33mhint: run \"git fetch\" to retrieve it.\u001b[m\n",
-            "\u001b[33mhint: \u001b[m\n",
-            "\u001b[33mhint: If you are planning to push out a new local branch that\u001b[m\n",
-            "\u001b[33mhint: will track its remote counterpart, you may want to use\u001b[m\n",
-            "\u001b[33mhint: \"git push -u\" to set the upstream config as you push.\u001b[m\n",
-            "error: 'Oreilly_curls/' does not have a commit checked out\n",
-            "fatal: adding files failed\n",
-            "On branch main\n",
-            "Untracked files:\n",
-            "  (use \"git add <file>...\" to include in what will be committed)\n",
-            "\t\u001b[31mOreilly_curls/\u001b[m\n",
-            "\n",
-            "nothing added to commit but untracked files present (use \"git add\" to track)\n",
-            "fatal: The current branch main has no upstream branch.\n",
-            "To push the current branch and set the remote as upstream, use\n",
-            "\n",
-            "    git push --set-upstream origin main\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "CipWk5pBTYRV"
-      }
     }
   ]
 }
